# ghostd

./: Cargo.toml  DEPENDS.md  GCRYPTINTEGRATION.md  JUN-29.md  README.md  VIRTUALMACHINE.md  build.rs
proto/: ghostd.proto
src/: chain.rs  domains.rs  error.rs  gcrypt_compat.rs  main.rs  quic.rs  rpc.rs  signer.rs  state.rs
src/ffi/: mod.rs  realid.rs
src/vm/: mod.rs  rvm.rs  zvm.rs
zquic-ffi/: Cargo.toml
zquic-ffi/src/: client.rs  crypto.rs  dns.rs  ffi.rs  grpc.rs  lib.rs  proxy.rs  server.rs
