[package]
name = "ghostd"
version = "0.2.0"
edition = "2024"

[dependencies]
# gRPC and networking
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# QUIC Transport - GhostKellz Stack (zquic FFI)
zquic-ffi = { path = "./zquic-ffi" }  # Local zquic FFI implementation
# zquic-sys = { git = "https://github.com/ghostkellz/zquic" }  # Future: Enable when remote repo is ready
# quinn = "0.11"
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
rustls = "0.21"
rcgen = "0.12"

# Cryptography - GhostKellz Stack 
# zcrypto = { git = "https://github.com/ghostkellz/zcrypto" }  # TODO: Enable when repo is ready
gcrypt = { git = "https://github.com/ghostkellz/gcrypt" }

# Fallback crypto (keep for compatibility during migration)
ed25519-dalek = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Legacy crypto (keep for compatibility)
sha2 = "0.10"
blake3 = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WASM runtime for zvm
wasmtime = "25.0"

# EVM runtime for rvm/rEVM
revm = "14.0"
ethers = "2.0"

# Database/storage
# rocksdb = "0.22"  # Temporarily disabled due to compilation issues
sled = "0.34"  # Alternative embedded database

# Utilities
hex = "0.4"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"
